--- a/front-react-lvl-2/package.json
+++ b/front-react-lvl-2/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
     "vite-tsconfig-paths": "^4.3.2",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "zustand-devtools": "^1.1.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
